# andoclawmoneymaker

./: .gitignore  IMPLEMENTATION_PLAN.md  andopred.md  macministart.md  pyproject.toml
data/: headlines.jsonl
data/models/: encoder_finetuned.pt  encoder_vicreg.pt  ood_baseline.pt  ood_baseline_real.pt  outcome_decoder.pt  predictor.pt
radiant_seer/: __init__.py  dashboard.py  learning.py  lightweight_dashboard.py  main_seer.py  scanner.py
radiant_seer/backtesting/: backtest.py
radiant_seer/configuration/: contracts.yaml  risk_params.yaml  settings.py
radiant_seer/data_swarm/: collector.py  ingest.py  news_embedder.py  normalization.py  sentiment.py  synthetic.py  topic_filter.py  vector_db.py
radiant_seer/data_swarm/scrapers/: base_scraper.py  fred_scraper.py  polymarket_scraper.py  reddit_scraper.py  rss_scraper.py  truthsocial_scraper.py
radiant_seer/execution/: kalshi_interface.py  kelly_sizing.py  poly_interface.py
radiant_seer/intelligence/: causal_predictor.py  contract_decoder.py  expert_aggregator.py  loss_functions.py  multimodal_encoder.py  relevance.py
radiant_seer/planning/: logic_guard.py  reward_module.py  seer_mcts.py
radiant_seer/training/: evaluate.py  finetune_real.py  run_pipeline.py  train_encoder.py  train_predictor.py  train_reward.py
tests/: test_backtest.py  test_collector.py  test_contract_decoder.py  test_encoder.py  test_ingest.py  test_kelly.py  test_learning.py  test_logic_guard.py  test_mcts.py  test_predictor.py  test_relevance.py  test_scanner.py  test_scrapers.py  test_topic_filter.py  test_training.py
