[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "radiant-seer"
version = "0.1.0"
description = "Predictive engine for event markets — identify misplaced lines via latent-state MCTS."
requires-python = ">=3.11"
dependencies = [
    "torch>=2.2",
    "numpy>=1.26",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "pyyaml>=6.0",
    "rich>=13.0",
    "loguru>=0.7",
]

[project.optional-dependencies]
data = [
    "sentence-transformers>=2.3",
    "chromadb>=0.4",
    "feedparser>=6.0",
    "requests>=2.31",
    "aiohttp>=3.9",
    "pandas>=2.1",
    "fredapi>=0.5",
]
exchange = [
    "py-clob-client>=0.15",
    "httpx>=0.26",
]
dev = [
    "pytest>=7.4",
    "ruff>=0.2",
]

[tool.setuptools.packages.find]
include = ["radiant_seer*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["N806", "N812"]  # Allow uppercase B/T/F — standard PyTorch conventions

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
